# invoice-parsing-llms

./: .gitignore  README.md  db_schema.sql  start-service.sh
dockerfiles/: Dockerfile.application  Dockerfile.microservice  docker-compose.yml
invoice-parsing/: .env.example  .gitignore  next.config.js  next.config.ts  package-lock.json  package.json
invoice-parsing-microservice/: application.py  pyproject.toml
invoice-parsing/src/: middleware.ts  worker.js
invoice-parsing/src/app/: globals.css  layout.tsx  page.tsx
invoice-parsing/src/app/(dashboard)/: layout.tsx  page.tsx
invoice-parsing/src/app/(dashboard)/invoices/: ExportButton.tsx  FileUpload.tsx  ProgressSteps.tsx  ResultsViewer.tsx  page.tsx
invoice-parsing/src/app/(dashboard)/results/: ResultDetails.tsx  page.tsx
invoice-parsing/src/app/(dashboard)/schemas/: SchemaBuilder.tsx  SchemaList.tsx  page.tsx
invoice-parsing/src/app/(dashboard)/settings/: page.tsx
invoice-parsing/src/app/api/invoices/results/: route.ts
invoice-parsing/src/app/api/invoices/services/: llmExtractor.ts  pdfProcessor.ts  validator.ts
invoice-parsing/src/app/api/invoices/upload/: route.ts
invoice-parsing/src/app/api/metrics/: route.ts
invoice-parsing/src/app/api/schemas/: route.ts
invoice-parsing/src/lib/auth/: middleware.ts
invoice-parsing/src/lib/db/: index.ts
invoice-parsing/src/middleware/: auth.ts
invoice-parsing/src/monitoring/: metrics.js
invoice-parsing/src/services/: llmExtractor.js  pdfProcessor.js  validator.js
tests/integration/: invoices.test.js
(+3 files in other folders)
