[project]
name = "invoice-parsing-microservice"
version = "0.1.0"
description = ""
authors = [
    {name = "Anchit Shrivastava",email = "anchit@ekasmi.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "pdf2image (>=1.17.0,<2.0.0)"
]

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
